--- a/apps/wallet-mobile/src/i18n/locales/vi-VN.json
+++ b/apps/wallet-mobile/src/i18n/locales/vi-VN.json
@@ -131,6 +131,7 @@
   "swap.swapScreen.currentBalance": "Current balance",
   "swap.swapScreen.selectToken": "Select token",
   "swap.swapScreen.marketPrice": "Market price",
+  "swap.swapScreen.limitPrice": "Limit price",
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
   "swap.swapScreen.slippageToleranceInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount",
   "swap.swapScreen.selectPool": "Select pool",
