--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 58,
+      "line": 66,
       "column": 13,
-      "index": 3036
+      "index": 3494
     },
     "end": {
-      "line": 61,
+      "line": 69,
       "column": 3,
-      "index": 3109
+      "index": 3567
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 62,
+      "line": 70,
       "column": 13,
-      "index": 3124
+      "index": 3582
     },
     "end": {
-      "line": 65,
+      "line": 73,
       "column": 3,
-      "index": 3206
+      "index": 3664
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 66,
+      "line": 74,
       "column": 13,
-      "index": 3221
+      "index": 3679
     },
     "end": {
-      "line": 69,
+      "line": 77,
       "column": 3,
-      "index": 3300
+      "index": 3758
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 70,
+      "line": 78,
       "column": 16,
-      "index": 3318
+      "index": 3776
     },
     "end": {
-      "line": 73,
+      "line": 81,
       "column": 3,
-      "index": 3403
+      "index": 3861
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 74,
+      "line": 82,
       "column": 15,
-      "index": 3420
+      "index": 3878
     },
     "end": {
-      "line": 77,
+      "line": 85,
       "column": 3,
-      "index": 3496
+      "index": 3954
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 78,
+      "line": 86,
       "column": 12,
-      "index": 3510
+      "index": 3968
     },
     "end": {
-      "line": 81,
+      "line": 89,
       "column": 3,
-      "index": 3587
+      "index": 4045
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 90,
       "column": 10,
-      "index": 3599
+      "index": 4057
     },
     "end": {
-      "line": 85,
+      "line": 93,
       "column": 3,
-      "index": 3672
+      "index": 4130
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 94,
       "column": 18,
-      "index": 3692
+      "index": 4150
     },
     "end": {
-      "line": 89,
+      "line": 97,
       "column": 3,
-      "index": 3781
+      "index": 4239
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 98,
       "column": 15,
-      "index": 3798
+      "index": 4256
     },
     "end": {
-      "line": 93,
+      "line": 101,
       "column": 3,
-      "index": 3881
+      "index": 4339
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 102,
       "column": 15,
-      "index": 3898
+      "index": 4356
     },
     "end": {
-      "line": 97,
+      "line": 105,
       "column": 3,
-      "index": 3981
+      "index": 4439
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 106,
       "column": 14,
-      "index": 3997
+      "index": 4455
     },
     "end": {
-      "line": 101,
+      "line": 109,
       "column": 3,
-      "index": 4078
+      "index": 4536
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 110,
       "column": 21,
-      "index": 4101
+      "index": 4559
     },
     "end": {
-      "line": 105,
+      "line": 113,
       "column": 3,
-      "index": 4196
+      "index": 4654
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 106,
+      "line": 114,
       "column": 25,
-      "index": 4223
+      "index": 4681
     },
     "end": {
-      "line": 109,
+      "line": 117,
       "column": 3,
-      "index": 4327
+      "index": 4785
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 110,
+      "line": 118,
       "column": 14,
-      "index": 4343
+      "index": 4801
     },
     "end": {
-      "line": 113,
+      "line": 121,
       "column": 3,
-      "index": 4431
+      "index": 4889
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 114,
+      "line": 122,
       "column": 12,
-      "index": 4445
+      "index": 4903
     },
     "end": {
-      "line": 117,
+      "line": 125,
       "column": 3,
-      "index": 4543
+      "index": 5001
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 118,
+      "line": 126,
       "column": 19,
-      "index": 4564
+      "index": 5022
     },
     "end": {
-      "line": 121,
+      "line": 129,
       "column": 3,
-      "index": 4665
+      "index": 5123
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 122,
+      "line": 130,
       "column": 16,
-      "index": 4683
+      "index": 5141
     },
     "end": {
-      "line": 125,
+      "line": 133,
       "column": 3,
-      "index": 4821
+      "index": 5279
     }
   },
   {
@@ -259,29 +259,59 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 126,
+      "line": 134,
       "column": 14,
-      "index": 4837
+      "index": 5295
     },
     "end": {
-      "line": 130,
+      "line": 138,
       "column": 3,
-      "index": 5018
+      "index": 5476
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapMinAdaTitle",
+    "defaultMessage": "!!!Min ADA",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 139,
+      "column": 19,
+      "index": 5497
+    },
+    "end": {
+      "line": 142,
+      "column": 3,
+      "index": 5579
     }
   },
   {
     "id": "swap.swapScreen.swapFees",
-    "defaultMessage": "!!!Swap fees include the following:\n   • Matchmaker Fee\n   • Frontend Fee\n   • Liquidity Provider Fee",
+    "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 131,
+      "line": 143,
       "column": 12,
-      "index": 5032
+      "index": 5593
     },
     "end": {
-      "line": 137,
+      "line": 146,
       "column": 3,
-      "index": 5198
+      "index": 5756
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapFeesTitle",
+    "defaultMessage": "!!!Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 147,
+      "column": 17,
+      "index": 5775
+    },
+    "end": {
+      "line": 150,
+      "column": 3,
+      "index": 5851
     }
   },
   {
@@ -289,14 +319,29 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 151,
       "column": 19,
-      "index": 5219
+      "index": 5872
     },
     "end": {
-      "line": 141,
+      "line": 154,
       "column": 3,
-      "index": 5365
+      "index": 6018
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapMinReceivedTitle",
+    "defaultMessage": "!!!Min Received",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 155,
+      "column": 24,
+      "index": 6044
+    },
+    "end": {
+      "line": 158,
+      "column": 3,
+      "index": 6136
     }
   },
   {
@@ -304,14 +349,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 159,
       "column": 17,
-      "index": 5384
+      "index": 6155
     },
     "end": {
-      "line": 145,
+      "line": 162,
       "column": 3,
-      "index": 5522
+      "index": 6293
     }
   },
   {
@@ -319,14 +364,14 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 163,
       "column": 20,
-      "index": 5544
+      "index": 6315
     },
     "end": {
-      "line": 149,
+      "line": 166,
       "column": 3,
-      "index": 5639
+      "index": 6410
     }
   },
   {
@@ -334,14 +379,29 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 167,
       "column": 24,
-      "index": 5665
+      "index": 6436
     },
     "end": {
-      "line": 154,
+      "line": 171,
       "column": 3,
-      "index": 5947
+      "index": 6718
+    }
+  },
+  {
+    "id": "global,price",
+    "defaultMessage": "!!! Price",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 172,
+      "column": 9,
+      "index": 6729
+    },
+    "end": {
+      "line": 175,
+      "column": 3,
+      "index": 6791
     }
   },
   {
@@ -349,14 +409,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 176,
       "column": 17,
-      "index": 5966
+      "index": 6810
     },
     "end": {
-      "line": 158,
+      "line": 179,
       "column": 3,
-      "index": 6068
+      "index": 6912
     }
   },
   {
@@ -364,14 +424,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 180,
       "column": 21,
-      "index": 6091
+      "index": 6935
     },
     "end": {
-      "line": 162,
+      "line": 183,
       "column": 3,
-      "index": 6193
+      "index": 7037
     }
   },
   {
@@ -379,14 +439,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 184,
       "column": 17,
-      "index": 6212
+      "index": 7056
     },
     "end": {
-      "line": 166,
+      "line": 187,
       "column": 3,
-      "index": 6299
+      "index": 7143
     }
   },
   {
@@ -394,14 +454,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 188,
       "column": 14,
-      "index": 6315
+      "index": 7159
     },
     "end": {
-      "line": 170,
+      "line": 191,
       "column": 3,
-      "index": 6396
+      "index": 7240
     }
   },
   {
@@ -409,14 +469,59 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 192,
       "column": 19,
-      "index": 6417
+      "index": 7261
     },
     "end": {
-      "line": 174,
+      "line": 195,
       "column": 3,
-      "index": 6508
+      "index": 7352
+    }
+  },
+  {
+    "id": "swap.swapScreen.tvl",
+    "defaultMessage": "!!!TVL",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 196,
+      "column": 7,
+      "index": 7361
+    },
+    "end": {
+      "line": 199,
+      "column": 3,
+      "index": 7427
+    }
+  },
+  {
+    "id": "swap.swapScreen.poolFee",
+    "defaultMessage": "!!! Pool Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 200,
+      "column": 11,
+      "index": 7440
+    },
+    "end": {
+      "line": 203,
+      "column": 3,
+      "index": 7516
+    }
+  },
+  {
+    "id": "swap.swapScreen.batcherFee",
+    "defaultMessage": "!!! Batcher Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 204,
+      "column": 14,
+      "index": 7532
+    },
+    "end": {
+      "line": 207,
+      "column": 3,
+      "index": 7614
     }
   },
   {
@@ -424,14 +529,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 208,
       "column": 9,
-      "index": 6519
+      "index": 7625
     },
     "end": {
-      "line": 178,
+      "line": 211,
       "column": 3,
-      "index": 6592
+      "index": 7698
     }
   },
   {
@@ -439,14 +544,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 212,
       "column": 9,
-      "index": 6603
+      "index": 7709
     },
     "end": {
-      "line": 182,
+      "line": 215,
       "column": 3,
-      "index": 6664
+      "index": 7770
     }
   },
   {
@@ -454,14 +559,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 216,
       "column": 19,
-      "index": 6685
+      "index": 7791
     },
     "end": {
-      "line": 186,
+      "line": 219,
       "column": 3,
-      "index": 6767
+      "index": 7873
     }
   },
   {
@@ -469,14 +574,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 220,
       "column": 20,
-      "index": 6789
+      "index": 7895
     },
     "end": {
-      "line": 190,
+      "line": 223,
       "column": 3,
-      "index": 6873
+      "index": 7979
     }
   },
   {
@@ -484,14 +589,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 224,
       "column": 25,
-      "index": 6900
+      "index": 8006
     },
     "end": {
-      "line": 194,
+      "line": 227,
       "column": 3,
-      "index": 7020
+      "index": 8126
     }
   },
   {
@@ -499,14 +604,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 228,
       "column": 8,
-      "index": 7030
+      "index": 8136
     },
     "end": {
-      "line": 198,
+      "line": 231,
       "column": 3,
-      "index": 7089
+      "index": 8195
     }
   },
   {
@@ -514,14 +619,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 232,
       "column": 14,
-      "index": 7105
+      "index": 8211
     },
     "end": {
-      "line": 202,
+      "line": 235,
       "column": 3,
-      "index": 7164
+      "index": 8270
     }
   },
   {
@@ -529,14 +634,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 205,
+      "line": 238,
       "column": 11,
-      "index": 7223
+      "index": 8329
     },
     "end": {
-      "line": 208,
+      "line": 241,
       "column": 3,
-      "index": 7318
+      "index": 8424
     }
   },
   {
@@ -544,14 +649,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 209,
+      "line": 242,
       "column": 12,
-      "index": 7332
+      "index": 8438
     },
     "end": {
-      "line": 212,
+      "line": 245,
       "column": 3,
-      "index": 7435
+      "index": 8541
     }
   },
   {
@@ -559,14 +664,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 213,
+      "line": 246,
       "column": 9,
-      "index": 7446
+      "index": 8552
     },
     "end": {
-      "line": 216,
+      "line": 249,
       "column": 3,
-      "index": 7536
+      "index": 8642
     }
   },
   {
@@ -574,14 +679,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 250,
       "column": 16,
-      "index": 7554
+      "index": 8660
     },
     "end": {
-      "line": 220,
+      "line": 253,
       "column": 3,
-      "index": 7650
+      "index": 8756
     }
   },
   {
@@ -589,14 +694,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 221,
+      "line": 254,
       "column": 20,
-      "index": 7672
+      "index": 8778
     },
     "end": {
-      "line": 224,
+      "line": 257,
       "column": 3,
-      "index": 7761
+      "index": 8867
     }
   },
   {
@@ -604,14 +709,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 225,
+      "line": 258,
       "column": 11,
-      "index": 7774
+      "index": 8880
     },
     "end": {
-      "line": 228,
+      "line": 261,
       "column": 3,
-      "index": 7868
+      "index": 8974
     }
   }
 ]
